Closed Bug 288331 Opened 21 years ago Closed 21 years ago

[FIX]Removing type attribute on an <input type="checkbox"> does not work

Categories

(Core :: Layout: Form Controls, defect, P1)

x86
All
defect

Tracking

()

RESOLVED FIXED
mozilla1.8beta2

People

(Reporter: doronr, Assigned: bzbarsky)

Details

(Keywords: testcase)

Attachments

(2 files)

Removing type attribute on an <input type="checkbox"> does not work, one would assume it should change the input to look like a regular textbox. The weird thing is, on Linux GTK2, it remains a checkbox, which can be checked and unchecked. On windows, it seems to become a regular input, but you can't type anything into it. Seen on trunk and 1.7 as well.
Attached file testcase —
Keywords: testcase
With an ancient build (gecko 1.0.1), clicking on the button makes the checkbox converts to a textbox with the value "on"
Attached patch Fix — — Splinter Review
I think the comment in the diff pretty much explains what's going on here...
Attachment #179095 - Flags: superreview?(peterv)
Attachment #179095 - Flags: review?(peterv)
Priority: -- → P1
Summary: Removing type attribute on an <input type="checkbox"> does not work → [FIX]Removing type attribute on an <input type="checkbox"> does not work
Target Milestone: --- → mozilla1.8beta2
Comment on attachment 179095 [details] [diff] [review] Fix This is basically a one-liner; should be a very quick review.
Attachment #179095 - Flags: superreview?(peterv)
Attachment #179095 - Flags: superreview?(jst)
Attachment #179095 - Flags: review?(peterv)
Attachment #179095 - Flags: review?(jst)
Comment on attachment 179095 [details] [diff] [review] Fix r+sr=jst
Attachment #179095 - Flags: superreview?(jst)
Attachment #179095 - Flags: superreview+
Attachment #179095 - Flags: review?(jst)
Attachment #179095 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: