Removing the type attr should make an input a text input.  Bug 288331, r+sr=jst